alineados yesteday, today y tomorrow

--- a/DesignExerciseOne/Base.lproj/Main.storyboard
+++ b/DesignExerciseOne/Base.lproj/Main.storyboard
@@ -24,8 +24,8 @@
                                 <color key="textColor" systemColor="systemPurpleColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="TOMORROW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zyb-tB-VIU">
-                                <rect key="frame" x="274" y="276" width="103" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOMORROW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zyb-tB-VIU">
+                                <rect key="frame" x="275" y="276" width="102" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -124,9 +124,8 @@
                                 <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" fixedFrame="YES" text="TODAY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HeN-ZR-Xcg">
-                                <rect key="frame" x="197" y="276" width="61" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="TODAY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HeN-ZR-Xcg">
+                                <rect key="frame" x="197" y="276" width="58" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -175,9 +174,8 @@
                                 <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="YESTERDAY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="liN-UB-ytP">
-                                <rect key="frame" x="80" y="276" width="97" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YESTERDAY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="liN-UB-ytP">
+                                <rect key="frame" x="80" y="276" width="97" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -220,17 +218,22 @@
                             <constraint firstItem="1JR-Ve-h8J" firstAttribute="top" secondItem="Vfz-fr-7HA" secondAttribute="top" id="DMy-RL-SL6"/>
                             <constraint firstItem="6Ai-3j-VB2" firstAttribute="leading" secondItem="Vfz-fr-7HA" secondAttribute="leading" constant="16" id="ITa-cV-Q8q"/>
                             <constraint firstItem="wA0-mu-zPD" firstAttribute="top" secondItem="aaV-zJ-Uwf" secondAttribute="bottom" constant="58.666666666666742" id="J5g-Nf-1v2"/>
+                            <constraint firstItem="HeN-ZR-Xcg" firstAttribute="leading" secondItem="liN-UB-ytP" secondAttribute="trailing" constant="20" id="JGe-41-GVj"/>
                             <constraint firstItem="aaV-zJ-Uwf" firstAttribute="top" secondItem="3eR-Vh-lMu" secondAttribute="bottom" constant="68" id="Kk2-eG-jhy"/>
                             <constraint firstItem="wA0-mu-zPD" firstAttribute="leading" secondItem="Vfz-fr-7HA" secondAttribute="leading" constant="16.333333333333336" id="LAG-DW-I2W"/>
+                            <constraint firstItem="HeN-ZR-Xcg" firstAttribute="top" secondItem="Vfz-fr-7HA" secondAttribute="top" constant="217" id="LTc-A8-2Es"/>
                             <constraint firstItem="6Ai-3j-VB2" firstAttribute="top" secondItem="wA0-mu-zPD" secondAttribute="bottom" constant="57.333333333333258" id="PqY-rA-Zro"/>
                             <constraint firstItem="3eR-Vh-lMu" firstAttribute="top" secondItem="Vfz-fr-7HA" secondAttribute="top" constant="255.33333333333326" id="Tz7-Wx-ATF"/>
                             <constraint firstItem="Vfz-fr-7HA" firstAttribute="bottom" secondItem="6Ai-3j-VB2" secondAttribute="bottom" constant="16" id="XWd-l6-QvN"/>
+                            <constraint firstItem="liN-UB-ytP" firstAttribute="leading" secondItem="Vfz-fr-7HA" secondAttribute="leading" constant="80" id="YCW-Jy-yPM"/>
+                            <constraint firstItem="liN-UB-ytP" firstAttribute="top" secondItem="Vfz-fr-7HA" secondAttribute="top" constant="217" id="cLf-Zy-9bC"/>
                             <constraint firstItem="1JR-Ve-h8J" firstAttribute="centerX" secondItem="UTM-vZ-XYu" secondAttribute="centerX" id="eCS-5o-qs0"/>
                             <constraint firstItem="1JR-Ve-h8J" firstAttribute="top" secondItem="Vfz-fr-7HA" secondAttribute="top" id="hW9-yG-imM"/>
                             <constraint firstItem="aaV-zJ-Uwf" firstAttribute="leading" secondItem="Vfz-fr-7HA" secondAttribute="leading" constant="16" id="i1W-pv-Kv7"/>
                             <constraint firstItem="3eR-Vh-lMu" firstAttribute="leading" secondItem="Vfz-fr-7HA" secondAttribute="leading" constant="16" id="m2e-Qj-OqF"/>
                             <constraint firstItem="Zyb-tB-VIU" firstAttribute="top" secondItem="Vfz-fr-7HA" secondAttribute="top" constant="217" id="sUZ-Et-qMf"/>
                             <constraint firstItem="Vfz-fr-7HA" firstAttribute="trailing" secondItem="Zyb-tB-VIU" secondAttribute="trailing" constant="16" id="tO1-Sg-2JE"/>
+                            <constraint firstItem="Zyb-tB-VIU" firstAttribute="leading" secondItem="HeN-ZR-Xcg" secondAttribute="trailing" constant="20" id="uMH-lm-Cpf"/>
                         </constraints>
                     </view>
                 </viewController>
